Remove SecurityManager family from JGDMS; DirtyChai owns it
The SecurityManager implementations are provided by DirtyChai in java.base;
JGDMS no longer ships or names them. On OpenJDK (dev/CI only) the stock
SecurityManager is used. The SecurityManager is selected at JVM launch via
-Djava.security.manager=default: no programmatic install and no fail-fast,
so running without a SecurityManager remains a supported inspection/test mode.

Removed:
  - org.apache.river.api.security.CombinerSecurityManager
  - org.apache.river.api.security.DelegateSecurityManager (+ test)
  - org.apache.river.api.security.PolicyOnlySecurityManager
  - org.apache.river.tool.SecurityPolicyWriter

Decouple DelegatePermission from the SecurityManager via a capability
interface instead of an SM subtype:
  - New org.apache.river.api.security.PermissionDelegate: a permission that
    nominates a substitute permission to check when it is not directly
    implied by a ProtectionDomain. A delegate-aware SecurityManager honours
    this generically, so it need not know about DelegatePermission, and the
    delegate check stays off the hot path (only on a failed direct imply).
  - DelegatePermission implements PermissionDelegate.
  - DelegatePermission.checkGuard now defers to the installed SecurityManager
    (was gated on the deleted DelegateSecurityManager subtype).

Phoenix:
  - Activation.buildGroupProcess propagates -Djava.security.manager into
    spawned activation-group JVMs unless the group already set it.
  - Programmatic installs removed from Activation, ActivationGroupInit,
    ServiceStarter (ensureSecurityManager() is now a no-op kept for callers),
    and envcheck/qa tools.

PREFERRED.LIST:
  - Removed the CombinerSecurityManager entries.
  - De-preferred ProxyAccessor / CodebaseAccessor / DynamicProxyCodebaseAccessor:
    cross-boundary interfaces cast on both sides of the bootstrap proxy path;
    preferring them risked a ClassCastException across the download
    class-loader divide